Make CLI a first-class API client
